ticket #3, Date Parameter

--- a/README
+++ b/README
@@ -14,9 +14,12 @@
 ・日付の取得が、日本時間でなく世界標準時が基準になっていた。
 　ニコニコ動画側のランキング更新は午前5時。実時刻ベースで動かすと、深夜0時～5時が当日分のデータのない空白時間帯になってしまう。ニコ動に最後にアクセスした日を記録しておいて、CSV編集するときの基準日とすることで解決。（こんな単純なシステムで日付管理せねばならなくなるとは…）
 
+過去のデータを提供できるようにした。
+　URLのdateパラメータに西暦8桁（YYYYMMDDあるいはYYYY/MM/DD、YYYY-MM-DD。前ゼロ）の数字を指定すると、その日付のデータをCSV化する。
+　例）　http://nico-rank.appspot.com/?date=20110708
+
 
 今後の予定：
-・過去のデータを提供できるようにする。
 ・CSV以外のデータフォーマットでの提供。JSONとか？
 ・過去のデータ（1年以上前とか）を削除する機能。
 ・カテゴリ個別のデータの提供。（勉強としての面白さはないので要望があれば考える）
