--- a/README
+++ b/README
@@ -1,25 +1,20 @@
 ﻿ニコニコ動画のランキング
-　GoogleAppEngineのお勉強に、ニコニコ動画のランキングをCSVフォーマットに変換して提供するwebアプリを作ってみた。
-　人間に直接見てもらうのでなく機械処理用。「コレを使って何か面白いもの作ってよ」という性格のもの。
+　GoogleAppEngineのお勉強に、ニコニコ動画のランキングをCSVフォーマットに変換して提供するwebアプリを作ってみました。
+　人間に直接見てもらうのでなく機械処理用。「コレを使って何か面白いもの作ってよ」という性格のものです。
 
-　http://nicorank.bagend.co.cc/
+　http://nicorank.bagend.info/
 
 
 概要：
-1日1度、自動的にニコニコ動画のランキングページ(http://www.nicovideo.jp/ranking)にアクセスして、ページから動画のURL、サムネイルのURLなど得る。
-利用者が上記のURLを開く(GET)と、貯め込んだデータから当日分をCSV形式（カンマ区切り、二重引用符あり、UTF-8）にして返す。
+1日1度、自動的にニコニコ動画のランキングページ( http://www.nicovideo.jp/ranking )にアクセスして、ページから動画のURL、サムネイルのURLなど得ます。
+利用者が上記のURLを開く(GET)と、貯め込んだデータから当日分をCSV形式（カンマ区切り、二重引用符あり、UTF-8）にして返します。
 
-
-作成中に起こった問題（解決済み）：
-・日付の取得が、日本時間でなく世界標準時が基準になっていた。
-　ニコニコ動画側のランキング更新は午前5時。実時刻ベースで動かすと、深夜0時～5時が当日分のデータのない空白時間帯になってしまう。ニコ動に最後にアクセスした日を記録しておいて、CSV編集するときの基準日とすることで解決。（こんな単純なシステムで日付管理せねばならなくなるとは…）
-
-過去のデータを提供できるようにした。
-　URLのdateパラメータに西暦8桁（YYYYMMDDあるいはYYYY/MM/DD、YYYY-MM-DD。前ゼロ）の数字を指定すると、その日付のデータをCSV化する。
+追加機能：
+- 過去のデータを提供できるようになりました。
+　URLのdateパラメータに西暦8桁（YYYYMMDDあるいはYYYY/MM/DD、YYYY-MM-DD。前ゼロ）の数字を指定すると、その日付のデータを返します。
 　例）　http://nico-rank.appspot.com/?date=20110708
+- JSONフォーマットで結果を返せるようになりました。
+　URLのformatパラメータにJSONを指定すると、JSON形式でデータを返します。
+　例）　http://nico-rank.appspot.com/?format=JSON
 
 
-今後の予定：
-・CSV以外のデータフォーマットでの提供。JSONとか？
-・過去のデータ（1年以上前とか）を削除する機能。
-・カテゴリ個別のデータの提供。（勉強としての面白さはないので要望があれば考える）
